<resources>
    <string name="app_name">Swoosh</string>
    <string name="backround_image">backround image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league">
        <![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
    <string name="beginner_hint">I have played a little basketball</string>
    <string name="baller_hint">I play a lot of basketball</string>
</resources>
