<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/backround_image"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="46sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="100dp"
    />
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textAlignment="center"
            android:textColor="@color/colorAccent" android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@+id/textView" android:layout_marginTop="50dp"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_amp_dominate_the_league"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:singleLine="false"
            android:textColor="@color/colorAccent" android:textAlignment="center" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/get_started"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"
            android:layout_marginBottom="16dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>