<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/backround_image"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginTop="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="32dp">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="195dp"
                tools:layout_editor_absoluteX="105dp" android:id="@+id/mensLeagueBtn"
                android:textOff="@string/mens" android:textOn="@string/mens" tools:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:textColor="@color/colorAccent" tools:background="@drawable/swoosh_toggle"
                android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_toggle"
                android:onClick="onWomensClicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedLeagueBtn" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:textColor="@color/colorAccent"
                tools:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:layout_marginBottom="16dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>