<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/backround_image" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton6" android:layout_weight="1"
                android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:textOff="@string/beginner" android:textOn="@string/beginner"
                tools:text="Beginner" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton7" android:layout_weight="1"
                android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:textOff="@string/baller" android:textOn="@string/baller"
                tools:text="Baller" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" tools:text="Finish"
            android:fontFamily="@font/montserrat" android:textAlignment="center"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>